# BormoStats

./: .gitattributes  .gitignore  .grype.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  ThePlan.md  project_status_report.md  todo_self_hosted_marketplace_analytics_wb_ozon_max_pack.md
marketplace-analytics/: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .env.stage.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
marketplace-analytics/automation/: engine.py
marketplace-analytics/automation/actions/: base.py  telegram.py
marketplace-analytics/automation/rules/: bad_acos.yml  low_stock.yml  no_sales_7d.yml
marketplace-analytics/backend/: Dockerfile
marketplace-analytics/backend/app/: main.py
marketplace-analytics/common/: __init__.py  celery_config.py  env_validation.py
marketplace-analytics/dashboards/: manifest.yml
marketplace-analytics/docs/: README.md  architecture.md  credential_rotation.md  disaster_recovery.md  environments.md  metabase.md  migration_policy.md  observability.md  performance.md  production_readiness_plan.md  production_readiness_todo.md  project_status_report.md  prometheus.md  release_checklist.md  release_management.md  release_notes_template.md  runbooks.md  supply_chain_security.md  troubleshooting.md
marketplace-analytics/scripts/: backfill.py  bootstrap.sh  check_tokens.py  perf_smoke.py  provision_clickhouse_users.py  run_local.sh
marketplace-analytics/warehouse/: apply_migrations.py
marketplace-analytics/workers/: Dockerfile
(+103 files in other folders)
